--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Learn react with create a indecision-app",
   "main": "index.js",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "live-server": "^1.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
@@ -16,7 +18,9 @@
     "eslint-plugin-react": "^7.4.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "live-server public/",
+    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "repository": "git+https://github.com/helmisatria/indecision-app.git",
   "author": "Helmi Satria",
