--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "live-server": "^1.2.0"
+    "live-server": "^1.2.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "validator": "^9.0.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
@@ -20,7 +27,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "live-server public/",
-    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build": "webpack",
+    "dev-server": "webpack-dev-server"
   },
   "repository": "git+https://github.com/helmisatria/indecision-app.git",
   "author": "Helmi Satria",
