--- a/.eslintrc
+++ b/.eslintrc
@@ -12,20 +12,19 @@
     "ReactDOM": true
   },
   "rules": {
-    
-    # "valid-jsdoc": ["error", {
-    #   "requireReturn": true,
-    #   "requireReturnType": true,
-    #   "requireParamDescription": true,
-    #   "requireReturnDescription": true,
-    # }],
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    # "require-jsdoc": ["error", {
-    #     "require": {
-    #         "FunctionDeclaration": true,
-    #         "MethodDefinition": true,
-    #         "ClassDeclaration": true
-    #     }
-    # }]
+    // "valid-jsdoc": ["error", {
+    //   "requireReturn": true,
+    //   "requireReturnType": true,
+    //   "requireParamDescription": true,
+    //   "requireReturnDescription": true,
+    // }],
+  "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    // "require-jsdoc": ["error", {
+    //     "require": {
+    //         "FunctionDeclaration": true,
+    //         "MethodDefinition": true,
+    //         "ClassDeclaration": true
+    //     }
+    // }]
   }
 }
