--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indecision-app",
+  "name": "expensify-app",
   "version": "1.0.0",
   "description": "Learn react with create a indecision-app",
   "main": "index.js",
