--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "es2015"
   ],
   "plugins": [
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ]
 }
