--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.3",
     "enzyme-to-json": "^3.2.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
     "live-server": "^1.2.0",
     "moment": "^2.19.1",
