webpack setting to prod

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
   },
   "globals": {
     "React": true,
-    "ReactDOM": true
+    "ReactDOM": true,
+    "expect": true
   },
   "rules": {
     // "valid-jsdoc": ["error", {
