--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.3",
     "enzyme-to-json": "^3.2.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
     "live-server": "^1.2.0",
@@ -50,7 +51,8 @@
   "scripts": {
     "test": "jest --config=jest.config.json",
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server"
   },
   "repository": "git+https://github.com/helmisatria/indecision-app.git",
