--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.3",
     "enzyme-to-json": "^3.2.1",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
@@ -53,7 +54,9 @@
     "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "repository": "git+https://github.com/helmisatria/indecision-app.git",
   "author": "Helmi Satria",
